# furance_robot

./: .gitignore  CLAUDE.md  README.md  chat.md  note.md  ruff.toml
.claude/: settings.json
.github/workflows/: ci.yml
dispatch/backend/: pyproject.toml
dispatch/backend/app/: main.py
dispatch/backend/app/api/: alarms.py  executions.py  logs.py  navigation.py  robot.py  robots.py  sampler.py  status.py  task.py
dispatch/backend/app/clients/: l2_client.py  robot_http.py  robot_ws.py  sampler_ws.py
dispatch/backend/app/core/: config.py  database.py
dispatch/backend/app/mock/: config.py  robot_mock.py  sampler_mock.py
dispatch/backend/app/models/: alarm.py  task.py
dispatch/backend/app/services/: alarm_service.py  l2_listener.py  log_service.py  robot_proxy.py  sampler_service.py  status_monitor.py  task_editor.py  task_engine.py  task_executor.py
dispatch/backend/tests/: conftest.py  test_config.py  test_database.py  test_robot_api.py  test_sampler_api.py  test_task_engine.py
dispatch/deploy/: build.sh  config.yaml  dispatch.spec  install.bat  start_server.py  uninstall.bat
dispatch/frontend/: index.html  package-lock.json  package.json  vite.config.js
dispatch/frontend/src/: App.vue  main.js  router.js
docs/: Magic商业导航接口-v1.4.4.json
docs/superpowers/plans/: 2026-05-11-dispatch-system.md  2026-05-11-frontends.md  2026-05-11-project-foundation.md  2026-05-11-robot-control-system.md  2026-05-14-t1-moveit-integration.md  2026-05-28-dispatch-refactor.md  2026-06-02-chassis-status-dispatch-sync.md  2026-06-11-camera-system-refactor.md  2026-06-17-camera-vision-improvement.md  2026-07-21-workflow-teach-optimization.md
docs/superpowers/specs/: 2026-05-11-robot-control-dispatch-design.md  2026-05-14-t1-moveit-integration-design.md  2026-05-28-dispatch-refactor-design.md  2026-06-02-chassis-status-dispatch-sync.md  2026-06-04-system-management-logging.md  2026-06-11-camera-system-refactor-design.md  (+1 more)
robot_control/backend/: pyproject.toml
robot_control/backend/app/: main.py
robot_control/deploy/: build.sh  config.yaml  install.sh  robot_control.service  robot_control.spec  start_server.py  uninstall.sh
robot_control/frontend/: index.html  package-lock.json  package.json
ros2_ws/: cyclonedds.xml
ros2_ws/src/furance_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/furance_interfaces/srv/: GenericCommand.srv
ros2_ws/src/t1_robot/control_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/t1_robot/control_interfaces/action/: GripperAction.action  HandAction.action  MoveJ.action  MoveL.action  MoveP.action  Navigation.action  UpperAction.action
ros2_ws/src/t1_robot/control_interfaces/srv/: ComputeIk.srv  ComputePose.srv  ExecuteTrajectory.srv  GetImage.srv  GetJoint.srv  GetPose.srv  GripperControl.srv  ManageObstacle.srv  MoveL.srv  MoveP.srv  PadControlPanel.srv  QRCalibrate.srv  QRDetection.srv  SceneOperation.srv  StartNode.srv  StopNode.srv  TeleopCommand.srv  VisionDetect.srv  YoloDetection.srv
ros2_ws/src/t1_robot/python_pkgs/: package.xml  setup.py
ros2_ws/src/t1_robot/python_pkgs/config/: three_cameras.rviz
ros2_ws/src/t1_robot/python_pkgs/launch/: three_cameras.launch.py
ros2_ws/src/t1_robot/python_pkgs/python_pkgs/: moveit.md
ros2_ws/src/t1_robot/python_pkgs/python_pkgs/action_client/: action_client.py  action_test.py  circular.py  move_tests.py
ros2_ws/src/t1_robot/python_pkgs/python_pkgs/grippers/: modbus_gripper_node.py
ros2_ws/src/t1_robot/python_pkgs/python_pkgs/orbbec_vision/: camera_calibration.py  camera_config.yaml  camera_manager_node.py  orbbec_camera_example.py  qr_calibrator.py  qr_detector.py  scene_manager.py  test_ir_chessboard.py  test_yolo_single.py  train_yolo.py  vision_model.py  yolo_config.yaml  yolo_detector.py
ros2_ws/src/t1_robot/python_pkgs/python_pkgs/orbbec_vision/models/: .gitignore
ros2_ws/src/t1_robot/python_pkgs/python_pkgs/t1_control/: real_arm_controller.py  sim_arm_controller.py  t1_display.py  t1_joint_state_publisher_gui.py  t1_joint_states_publisher.py  t1_move_client.py
ros2_ws/src/t1_robot/python_pkgs/python_pkgs/test/: gripper_test.py
ros2_ws/src/t1_robot/python_pkgs/python_pkgs/vision/: QR_dete.py  QR_publisher.py  add_obstacle.py  cal_tag_to_hand.py  camera_calibration.py  camera_config.yaml  camera_handler.py  camera_manager.py  camera_manager_node.py  camera_ws_handler.py  pose_trans.py  pose_trans_tf.py  pt2onnx.py  reverse.py  vision_detect_node.py  yolo_dete.py
ros2_ws/src/t1_robot/t1_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/t1_robot/t1_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  t1.ros2_control.xacro  t1.srdf  t1.urdf.xacro
ros2_ws/src/t1_robot/t1_moveit_config/launch/: t1_moveit.launch.py  t1_moveit_headless.launch.py  t1_rviz.launch.py
ros2_ws/src/t1_robot/t1_moveit_config/src/: t1_moveit_control_service.cpp
scripts/: README.md  cyclonedds_profile.xml  dev.sh  furance-backend.service  furance-backend.sh  furance-frontend.service  furance-frontend.sh  furance-node-manager.service  furance-node-manager.sh  install_autostart.sh
shared/: pyproject.toml
shared/src/furance_shared/models/: command.py  robot.py  status.py  workflow.py
shared/src/furance_shared/protocol/: http_schema.py  ws_frames.py
shared/src/furance_shared/utils/: enum.py  errors.py  logging.py
shared/tests/: test_command.py  test_errors.py  test_http_schema.py  test_robot.py  test_ws_frames.py
(+162 files in other folders)
