<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>python_pkgs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="banwf@foxmail.com">baosight</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_python</build_depend>
  <exec_depend>ament_python</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
